--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,7 +23,7 @@ jobs:
     - name: Set up Go 1.21
       uses: actions/setup-go@v4
       with:
-        go-version: 1.21
+        go-version: '1.21'
 
     - name: Build
       run: go build -o go-web-app
